# OtterSlice

./: CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md  SECURITY.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.toml  markets.toml  tuning.toml
docs/reports/: paper_calibration.md
docs/runbooks/: killswitch.md
third-parties/openbook-dex/: Cargo.toml
third-parties/openbook-dex/src/: lib.rs
third-parties/phoenix-sdk/: Cargo.toml
third-parties/phoenix-sdk/src/: lib.rs
toon/: Cargo.toml  EPIC-001-fondations.md  EPIC-002-ingestion.md  EPIC-003-execution.md  EPIC-004-risque.md  EPIC-005-paper.md  EPIC-006-auto-tuning.md  MASTER_PLAN.md  SPRINT-001A-toolchain.md  SPRINT-001B-workspace.md  SPRINT-002A-cex-connecteurs.md  SPRINT-002B-cex-reconstructeur.md  SPRINT-002C-dex-clob.md  SPRINT-002D-dex-clmm.md  SPRINT-003A-fees.md  SPRINT-003B-scanner.md  SPRINT-003C-cex-exec.md  SPRINT-003D-dex-hedge.md  SPRINT-004A-pretrade.md  SPRINT-004B-monitoring.md  SPRINT-004C-killswitch.md  SPRINT-005A-paper.md  SPRINT-005B-calibration.md  SPRINT-006A-tuner.md
toon/src/: main.rs
