[package]
name = "toon"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
serde = { version = "1", default-features = false, features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "env-filter", "fmt", "ansi"] }
